Fix problems reported by CodeQL